# dualsense-tools

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-and-test.yml
dualsense-tilt-and-throttle/: Cargo.toml  README.md
dualsense-tilt-and-throttle/feeders/: full_6_axes_and_throttle.toml  full_8_axes.toml  roll_pitch.toml  roll_pitch_throttle.toml
dualsense-tilt-and-throttle/src/: app.rs  channels.rs  delta_t_tracker.rs  emulated.rs  emulated_axis_value.rs  emulator.rs  main.rs  term_ui.rs  window.rs
dualsense-tilt-and-throttle/src/feeder/: backend.rs  config.rs  configured.rs  dummy.rs  error.rs  feeders.rs  mod.rs  unsupported.rs  vjoy.rs
dualsense-tilt-and-throttle/src/feeder/backend/: backend_id.rs  disabled.rs  error.rs  mod.rs  unsupported.rs  vjoy.rs
dualsense-tilt-and-throttle/src/threads/: feeder.rs  feeding.rs  mod.rs  poller.rs  polling.rs  ui_updater.rs  updating_ui.rs
dualsense-tilt-and-throttle/src/virtual_controller/: axes.rs  axis_value.rs  buttons.rs  controller.rs  controls.rs  hat.rs  mod.rs  state.rs
dualsense-tools/: Cargo.toml
dualsense-tools-bevy/: Cargo.toml  README.md
dualsense-tools-bevy/examples/: visualizer.rs
dualsense-tools-bevy/src/: lib.rs  main.rs  plugin.rs  scene.rs  term_ui.rs
dualsense-tools-bevy/src/spatial_visualizer/: mod.rs
dualsense-tools/src/: as_tilt.rs  axes_joiner.rs  control.rs  control_ids.rs  dualsense.rs  hid_report.rs  lib.rs  state_event.rs  states_buffer.rs  tilt.rs  timestamped.rs
dualsense-tools/src/events/: determinator.rs  determinator_config.rs  event.rs  mod.rs
dualsense-tools/src/state/: accel.rs  axes.rs  dualense_state.rs  gyro.rs  hat.rs  mod.rs  spatial_sensor.rs  state.rs  values.rs
dualsense-tools/src/tilt_estimator/: config.rs  estimates.rs  estimator.rs  mod.rs
vhid/: Cargo.toml
vhid/src/: lib.rs
