[package]
name = "dualsense-tilt-and-throttle"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
color-eyre = "0.6"
cosmic-text = "0.19.0"
crossbeam-channel = "0.5.15"
dualsense-tools = { path = "../dualsense-tools/" }
eframe = "0.34.2"
egui_ratatui = "2.2.0"
hidapi = "2.6"
ratatui = "0.30"
soft_ratatui = { version = "0.2.0", features = ["embedded-ttf"] }
rusttype = "0.9.3"

[target.'cfg(windows)'.dependencies]
vjoy = { version = "0.7" }
