[package]
name = "dualsense-tools"
version = "0.1.0"
description = "Tools to interact with the Dualsense PS5 controller"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/dualsense_tools"
homepage = "https://github.com/Astrac/dualsense-tools"
repository = "https://github.com/Astrac/dualsense-tools"
keywords = ["gamepad", "controller", "input", "gamedev"]
categories = ["game-development"]

[dependencies]
circular-buffer = "1.2"
glam = "0.32"
hidapi = "2.6"
serde = { version = "1.0", optional = true, features = ["serde_derive"] }
